--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,7 @@
     />
     <title>React App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!-- stuff happens here  -->
+  <body id="root">
+    <!-- stuff happens here -->
   </body>
 </html>
